# murali

./: .gitignore  Cargo.toml  LICENSE  MemberData.csv  README.md  Shuttle.toml
.github/workflows/: shuttle-deploy.yml  shuttle.yml
docs/: README.md
src/: errors.rs  file.rs  main.rs  misc.rs  sheets.rs
