[package]
name = "murali"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
google-sheets4 = "5.0.3"
hyper = "1.0.1"
hyper-rustls = "0.24.2"
poise = "0.5.7"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["rt-multi-thread", "full"] }
yup-oauth2 = "8.3.0"
