[package]
name = "murali"
version = "0.1.0"
edition = "2021"

[dependencies]

# Shuttle Deployment
shuttle-serenity = "0.36.0"
shuttle-runtime = "0.36.0"
shuttle-poise = "0.36.0"
shuttle-secrets = "0.36.0"

# Discord API and Bot 
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
poise = "0.5.7"

# Google Sheets API
yup-oauth2 = "8.3.0"
google-sheets4 = "5.0.3"

# HTTP Client Builders
hyper = "1.0.1"
hyper-rustls = "0.24.2"

serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["rt-multi-thread", "full"] }
csv = "1.3.0"
chrono = "0.4.31"
chrono-tz = "0.8.4"
